Added fonts and some styling

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,17 +1,15 @@
 ---
-title: Welcome to my blog!
+title: Welcome to my blog
 description: cybersec blog
-head:
-  - tag: title
-    content: blog
 template: splash
 editUrl: false
 lastUpdated: false
 hero:
   actions:
-    - text: Take a peek inside!
+    - text: Show more
       link: /introduction/whoami/
       icon: right-arrow
+tableOfContents: false
 ---
 
 
