--- a/src/content/docs/introduction/oscp.mdx
+++ b/src/content/docs/introduction/oscp.mdx
@@ -119,10 +119,4 @@ Well in hindsight, it really is an easy **ENTRY** level certification, which you
 
 It all starts with just doing an absolute boatload of practice and staying consistent. There's enough resources out there to train, but I used HTB and Proving Grounds, where I felt that Proving Grounds was way easier in comparison (and more in line with the exam).
 
-<Aside type="tip">
-    - Finish *ALL* the Proving Grounds Practice boxes from [this list](https://docs.google.com/spreadsheets/u/0/d/18weuz_Eeynr6sXFQ87Cd5F0slOj9Z6rt/htmlview?pli=1#)
-    - Do all the provided Challenge Labs
-    - If you feel like the course material is inadequate, look for external material (such as HTB)
-    - Use Obsidian or any other note app to write down detailed cheatsheets
-    - Don't be afraid of looking at writeups, as long as you actually learn from them!
-</Aside>
+Check out the next blog for a more detailed checklist.
