--- a/src/content/docs/oscp/oscp-guide.mdx
+++ b/src/content/docs/oscp/oscp-guide.mdx
@@ -79,6 +79,25 @@ Furthermore the HTB boxes are way less likely to contain easy credentials like `
 In my preparation for the second attempt I had finished ALL the PG boxes from Lain's list, all writeups are available on this site.
 :::
 
+## 4. Cheatsheets
+
+Like most others I am against reading other's notes because you really don't learn anything from it. However I do think that some cheatsheets are extremely useful,
+and you should definitely have these ready whenever you're doing a CTF. 
+
+That said, here are some examples that I found incredibly useful both during my prep as well as during the exam:
+
+- [Obsidian Canvas Cheatsheets](https://github.com/MaxK9999/Pentesting-Cheatsheets)
+- [GTFObins](https://gtfobins.github.io/) (ABSOLUTE must, add to your browser bookmarks)
+- [HackTricks](https://book.hacktricks.wiki/en/index.html) (saved my ass multiple times)
+- [RevShells](https://www.revshells.com/) (use `busybox` for Linux and `Powershell #3 (Base64)` for Windows, works everytime)
+- [Explanation of all potatoes](https://jlajara.gitlab.io/Potatoes_Windows_Privesc)
+- [Online AD mindmap](https://mayfly277.github.io/assets/blog/pentest_ad_dark.svg) (I preferred the obsidian canvas one)
+- [CrackStation](https://crackstation.net/) (quickly crack hashes, works about 50% of the time)
+
+Don't just add these to your list but actually use them, that way you can get acquainted with them and speed up your workflow.
+
+
+
 
 
 # TL;DR
