--- a/src/content/docs/introduction/whoami.mdx
+++ b/src/content/docs/introduction/whoami.mdx
@@ -25,7 +25,7 @@ I have 2+ years of experience with Linux, scripting and hacking and have rooted 
 ### Skillset
 - Penetration Testing
 - Report Writing
-- Scripting
+- Scripting (bash & python)
 - Enumeration
 - OSINT
 - Networking
