--- a/src/content/docs/oscp/oscp-guide.mdx
+++ b/src/content/docs/oscp/oscp-guide.mdx
@@ -1,9 +1,11 @@
 ---
 layout: /src/layouts/PostLayout.astro
-title: Tips for passing OSCP
+title: Tips for passing the OSCP exam
 tags: ["OSCP", "OffSec", "Cyber", "pentesting"]
+hero:
+    image:
+        file: '../../../assets/oscp+.png'
 ---
-import { Image } from 'astro:assets';
 
 ## 1. Prerequisites
 
@@ -17,9 +19,10 @@ While yes it is totally achievable to get the certification with no previous bac
 devote an absolute **boatload** of time.<br></br><br></br>
 I was solving anywhere between 3-5 boxes a day during my preparation for the exam all while still working.
 While there have been instances of people saying:
+<br></br>
+>*"Yeah I passed the OSCP exam with just 30 pwned CTF's"*
 
->"Yeah I passed the OSCP with just 30 HackTheBox CTF's"
-
+<br></br>
 You really shouldn't compare yourselves to them because you have absolutely no idea what sort of previous knowledge they have.
 
 The ONLY way to actually be able to pass the exam is putting in *hours and hours* of work and studying, and honestly, if you don't get
