--- a/src/content/docs/writeups/Sybaris.mdx
+++ b/src/content/docs/writeups/Sybaris.mdx
@@ -1,7 +1,7 @@
 ---
 layout: /src/layouts/PostLayout.astro
 title: Sybaris
-tags: ["#pwnkit", "redis"]
+tags: ["pwnkit", "redis"]
 ---
 **Start 10:21 14-05-2025**
 
