--- a/src/content/docs/oscp/oscp-guide.mdx
+++ b/src/content/docs/oscp/oscp-guide.mdx
@@ -89,7 +89,7 @@ and you should definitely have these ready whenever you're doing a CTF.
 
 That said, here are some examples that I found incredibly useful both during my prep as well as during the exam:
 
-- [Obsidian Canvas Cheatsheets](https://github.com/MaxK9999/Pentesting-Cheatsheets)
+- [Obsidian Canvas Cheatsheets](https://github.com/eMVee-NL/MindMap)
 - [GTFObins](https://gtfobins.github.io/) (ABSOLUTE must, add to your browser bookmarks)
 - [HackTricks](https://book.hacktricks.wiki/en/index.html) (saved my ass multiple times)
 - [RevShells](https://www.revshells.com/) (use `busybox` for Linux and `Powershell #3 (Base64)` for Windows, works everytime)
